<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/feedback"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_margin="20sp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_fluentperson"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/change_theme"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_margin="20sp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_pencil"
        />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20sp"
        android:gravity="left|center_vertical"
        android:text="@string/exit"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_exit" />
    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />


</LinearLayout>