<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    android:orientation="vertical">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:id="@+id/view5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:srcCompat="@drawable/ic_ellipse" />
            <View
                android:id="@+id/view10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/surname" />

                <EditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/id" />
            </LinearLayout>

            <View
                android:id="@+id/view6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="horizontal">

            <View
                android:id="@+id/view11"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/back"
                app:srcCompat="@drawable/ic_pencil"
                />

            <View
                android:id="@+id/view12"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="3" />
        </LinearLayout>


    </LinearLayout>


    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        />


</LinearLayout>